# hypokrites

./: .gitignore  CMakeLists.txt  actor_state.hpp
include/: abstract_actor.hpp  actor.hpp  actor_base.hpp  actor_system.hpp  mailbox.hpp  message_handler.hpp  messages.hpp  monitors.hpp  scheduler.hpp
include/utility/: callable.hpp  meta.hpp  thread_pool.hpp  threadsafe_list.hpp  threadsafe_queue.hpp
src/: main.cpp
